Label filters: fix issues with long labels
* labels in label filters now have a maximum width to prevent running
  out of screen
* labels exceeding this width are cut off with an ellipsis ("...") and
  the full label is shown in a tooltip on hover

CMK-16295

--- a/web/htdocs/themes/facelift/scss/_views.scss
+++ b/web/htdocs/themes/facelift/scss/_views.scss
@@ -328,6 +328,7 @@ div.floatfilter {
 
     div.label_group select[id$="_vs"] + span.select2-container--default {
       width: auto !important;
+      max-width: $label-filters-label-max-width;
     }
   }
 }
